# claude-code-github-actions-summary

./: CLAUDE.md  README.md  main.py  pyproject.toml  tox.ini
src/: __init__.py  formatters.py  github_client.py  log_parser.py  metrics_extractor.py  processor.py  report_generator.py
